[package]
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
categories = ["development-tools"]
description = """
Provides utilities for collecting Prometheus-compatible metrics from Tokio runtime and tasks.
"""
edition = "2021"
keywords = ["metrics", "prometheus", "tokio"]
license = "MIT OR Apache-2.0"
name = "tokio-metrics-collector"
repository = "https://github.com/Hanaasagi/tokio-metrics-collector"
version = "0.2.3"

[features]
default = ["rt"]
rt = ["tokio"]

[dependencies]
lazy_static = "1.5.0"
parking_lot = "0.12.3"
prometheus = "0.13.4"
tokio = { version = "1.39.2", features = ["rt"], optional = true }
tokio-metrics = "0.4"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "--cfg", "docsrs", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tokio_unstable"]
